--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class='masthead-heading'>Bailey Beck</h1>
     </header>
     <section class="details">
-      <h1>Introduction</h1>
+      <h1>Intro Woobles</h1>
       <p>Details here...</p>
       <h1>Where I'm From</h1>
       <p>Details here...</p>
