--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         <h1 class='masthead-heading'>Bailey Beck</h1>
     </header>
     <section class="details">
-      <h1>Intro Woobles</h1>
-      <p>Details here...</p>
+      <h1>Introduction</h1>
+      <p>Can't wait to meet y'all!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm from the middle of nowhere on a cattle ranch around 40 miles north of Austin. </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I have several hobbies, I enjoy gardening and plant progation the most. My other hobbies tend to be off-shoots of my gardening.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>The job of my dreams would be a career in bioinformatics, I'm learning code in hopes to make that a reality.' </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Currently, I live in an apartment in center Austin.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I genuinely enjoy creating.</p>
     </section>
 
     <footer id="footer">
