made some updates to info in p blocks

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>Can't wait to meet y'all!</p>
       <h1>Where I'm From</h1>
-      <p>I'm from the middle of nowhere on a cattle ranch around 40 miles north of Austin. </p>
+      <p>I grew up on a cattle ranch around 40 miles north of Austin, but I've lived all over Texas the last 10 years. </p>
       <h1>What are your favorite hobbies?</h1>
       <p>I have several hobbies, I enjoy gardening and plant progation the most. My other hobbies tend to be off-shoots of my gardening.</p>
       <h1>What's your dream job?</h1>
-      <p>The job of my dreams would be a career in bioinformatics, I'm learning code in hopes to make that a reality.' </p>
+      <p>The job of my dreams would be a career in bioinformatics, I'm learning code in hopes of making that a reality.</p>
       <h1>Where do you live?</h1>
-      <p>Currently, I live in an apartment in center Austin.</p>
+      <p>Currently, I live in an apartment about three miles north of downtown.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I genuinely enjoy creating.</p>
+      <p>I genuinely enjoy creating and solving puzzles.</p>
     </section>
 
     <footer id="footer">
